@@ -31,6 +31,7 @@ CREATE TABLE `clarification` (
 CREATE TABLE `contest` (
   `cid` int(4) unsigned NOT NULL auto_increment,
   `contestname` varchar(255) NOT NULL default '',
+  `activatetime` datetime NOT NULL default '0000-00-00 00:00:00',
   `starttime` datetime NOT NULL default '0000-00-00 00:00:00',
   `lastscoreupdate` datetime default NULL,
   `endtime` datetime NOT NULL default '0000-00-00 00:00:00',
