@@ -25,6 +25,10 @@ Version 2.2.0 - SVN
  - Fix bug that jury was not allowed to set clarifications (un)answered.
  - Fix problem that runguard ignored SIGARLM on some distributions (thanks
    Tobias Werth).
+ - New required activatetime field for a contest: defines the moment the
+   team/public displays start to display this contest, but no submissions
+   accepted yet. Solves the problem of testsession data still displayed upto
+   the second before a contest starts (Closes: #1825555).
 
 Version 2.1.1 - SVN
 -------------------
